@@ -383,7 +383,6 @@
 #define MEMW_EDIT02RMADDRESS            1190
 #define INSERTCS_STATIC                 1190
 #define MEMW_EDIT03RMADDRESS            1191
-#define IDC_DEBUG_RESTORESIZE           1191
 #define IDC_DEBUGGER_RESTORESIZE        1191
 #define MEMW_EDIT04RMADDRESS            1192
 #define EDIT00_RESULTS                  1193
@@ -625,6 +624,10 @@
 #define ID_GAME_VIEWCOMMENTSSUBTITLES40312 40312
 #define ID_OPTIONS_COLLAPSETO1COLUMN    40313
 #define MEMW_OPTIONS_EXPANDCOLLAPSE     40314
+#define ID_GAME_UNDOLOADSTATE           40315
+#define FCEUX_CONTEXT_UNDOLOADSTATE     40316
+#define ID_GAME_UNDOLOADSTATE40317      40317
+#define ID_GAME_UNDOLOADSTATE40318      40318
 #define IDC_DEBUGGER_ICONTRAY           55535
 #define MW_ValueLabel2                  65423
 #define MW_ValueLabel1                  65426
@@ -634,7 +637,7 @@
 #ifdef APSTUDIO_INVOKED
 #ifndef APSTUDIO_READONLY_SYMBOLS
 #define _APS_NEXT_RESOURCE_VALUE        125
-#define _APS_NEXT_COMMAND_VALUE         40315
+#define _APS_NEXT_COMMAND_VALUE         40319
 #define _APS_NEXT_CONTROL_VALUE         1192
 #define _APS_NEXT_SYMED_VALUE           101
 #endif
